course update시 mapstaticimage 파일 수정